--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,25 +21,11 @@ jobs:
       CC: gcc-10
     outputs:
       version: ${{ steps.build.outputs.version }}
-    container:
-      image: ubuntu:18.04
-      options: --privileged # Privileged mode is needed to load fuse module.
     steps:
-      - name: Prepare container
-        run: |
-          apt-get update
-          apt-get install -y software-properties-common
-          add-apt-repository -y ppa:ubuntu-toolchain-r/test # For gcc-10.
-          add-apt-repository -y ppa:git-core/ppa # For git>=2.18.
-          apt-get update
-          apt-get install -y git gcc-10
-          apt-get install -y fuse libfuse2 # For linuxdeploy.
-          # Workaround for https://github.com/actions/checkout/issues/766.
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - run: ./.github/scripts/install_deps.sh --container
+      - run: ./.github/scripts/install_deps.sh
       - if: github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.tag_name != 'nightly')
         run: |
           echo 'NVIM_BUILD_TYPE=Release' >> $GITHUB_ENV
