ci(cirrus): disable on draft PRs
Cirrus CI now has a monthly free compute limit.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ env:
 
 freebsd_task:
   name: FreeBSD
-  only_if: $BRANCH != "master"
+  only_if: $BRANCH != "master" && !$CIRRUS_PR_DRAFT
   freebsd_instance:
     image_family: freebsd-13-2
   timeout_in: 30m
