ci: enable clang-analyzer warnings
This adds the checks in https://neovim.io/doc/reports/clang/ when using
clang-tidy. The strategy is to enable all clang-analyzer checks, and
disable only the checks for the warnings that exist currently. This
allows us to eliminate each warning type without blocking ongoing work,
but also without adding bugs for already eliminated warnings.

The plan is to eventually eliminate https://neovim.io/doc/reports/clang/
by completely integrating it into the clang-tidy check.

Also add make and cmake targets `clang-analyzer` to run this check.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,6 +83,20 @@ jobs:
         name: uncrustify
         run: cmake --build build --target lintc-uncrustify
 
+  clang-analyzer:
+    runs-on: ubuntu-22.04
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v4
+      - run: ./.github/scripts/install_deps.sh
+      - uses: ./.github/actions/cache
+      - name: Build third-party deps
+        run: |
+          cmake -S cmake.deps -B .deps -G Ninja
+          cmake --build .deps
+          cmake -B build -G Ninja
+      - run: cmake --build build --target clang-analyzer
+
   posix:
     name: ${{ matrix.runner }} ${{ matrix.flavor }} (cc=${{ matrix.cc }})
     strategy:
