fixup: quick update, squash later

--- a/.github/workflows/run_on_arch.yml
+++ b/.github/workflows/run_on_arch.yml
@@ -43,4 +43,6 @@ jobs:
           githubToken: ${{ github.token }}
 
           run: |
+            apt-get update -y
+            apt-get install -y make
             make
