--- a/.github/workflows/run_on_arch.yml
+++ b/.github/workflows/run_on_arch.yml
@@ -43,6 +43,6 @@ jobs:
           githubToken: ${{ github.token }}
 
           run: |
-            apt-get update -y
-            apt-get install -y make attr build-essential cmake curl gettext libattr1-dev ninja-build unzip locales-all cpanminus
+            apt-get update -q -y
+            apt-get install -q -y make attr build-essential cmake curl gettext libattr1-dev ninja-build unzip locales-all cpanminus
             make
