--- a/.github/workflows/optional.yml
+++ b/.github/workflows/optional.yml
@@ -8,7 +8,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  INSTALL_PREFIX: ${{ github.workspace }}/nvim-install
+  TEST_TIMEOUT: 3600
   # TEST_FILE: test/functional/shada
   # TEST_FILTER: foo
 
@@ -29,7 +29,7 @@ jobs:
             bash -c
             "
             apt-get -y update &&
-            DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential cmake curl gettext ninja-build locales-all cpanminus git attr libattr1-dev  &&
+            DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential cmake curl gettext ninja-build locales-all cpanminus git attr libattr1-dev &&
             git clone --depth=1 https://github.com/neovim/neovim.git &&
             cd neovim &&
             git fetch origin ${{ github.ref }}:pr &&
