--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,6 +109,7 @@ jobs:
             { runner: ubuntu-22.04, cc: gcc },
             { runner: macos-12, cc: clang, flags: -D CMAKE_FIND_FRAMEWORK=NEVER, deps_flags: -D CMAKE_FIND_FRAMEWORK=NEVER },
             { runner: ubuntu-22.04, flavor: functionaltest-lua, cc: gcc, deps_flags: -D USE_BUNDLED_LUAJIT=OFF -D USE_BUNDLED_LUA=ON, flags: -D PREFER_LUA=ON },
+            { runner: ubuntu-22.04, flavor: '32', cc: gcc, arch: i386 },
           ]
         test: [unittest, functionaltest, oldtest]
         exclude:
@@ -124,7 +125,8 @@ jobs:
       CC: ${{ matrix.build.cc }}
     steps:
       - uses: actions/checkout@v4
-      - run: ./.github/scripts/install_deps.sh --test
+
+      - run: ./.github/scripts/install_deps.sh --test --arch ${{ matrix.build.arch }}
       - uses: ./.github/actions/cache
 
       - name: Set up environment
