refactor: enable formatting for ternaries
This requires removing the "Inner expression should be aligned" rule
from clint as it prevents essentially any formatting regarding ternary
operators.

--- a/src/uncrustify.cfg
+++ b/src/uncrustify.cfg
@@ -972,7 +972,7 @@ sp_after_oc_property            = ignore   # ignore/add/remove/force/not_defined
 sp_after_oc_synchronized        = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space around the ':' in 'b ? t : f'.
-sp_cond_colon                   = ignore   # ignore/add/remove/force/not_defined
+sp_cond_colon                   = force    # ignore/add/remove/force/not_defined
 
 # Add or remove space before the ':' in 'b ? t : f'.
 #
@@ -1610,7 +1610,7 @@ indent_using_block              = true     # true/false
 # 0: Off (default)
 # 1: When the `if_false` is a continuation, indent it under the `if_true` branch
 # 2: When the `:` is a continuation, indent it under `?`
-indent_ternary_operator         = 0        # unsigned number
+indent_ternary_operator         = 2        # unsigned number
 
 # Whether to indent the statements inside ternary operator.
 indent_inside_ternary_operator  = false    # true/false
@@ -2570,7 +2570,7 @@ pos_compare                     = ignore   # ignore/break/force/lead/trail/join/
 
 # The position of conditional operators, as in the '?' and ':' of
 # 'expr ? stmt : stmt', in wrapped expressions.
-pos_conditional                 = ignore   # ignore/break/force/lead/trail/join/lead_break/lead_force/trail_break/trail_force
+pos_conditional                 = lead     # ignore/break/force/lead/trail/join/lead_break/lead_force/trail_break/trail_force
 
 # The position of the comma in wrapped expressions.
 pos_comma                       = ignore   # ignore/break/force/lead/trail/join/lead_break/lead_force/trail_break/trail_force
@@ -3731,5 +3731,5 @@ set CLASS_COLON                  REAL_FATTR_CONST
 set CLASS_COLON                  REAL_FATTR_NONNULL_ALL
 set CLASS_COLON                  REAL_FATTR_PURE
 set CLASS_COLON                  REAL_FATTR_WARN_UNUSED_RESULT
-# option(s) with 'not default' value: 132
+# option(s) with 'not default' value: 135
 #
