--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -340,3 +340,20 @@ jobs:
         run: |
           cmake --preset ci
           cmake --build build
+
+  iwyu:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    env:
+      CC: clang
+    steps:
+      - uses: actions/checkout@v4
+      - run: ./.github/scripts/install_deps.sh
+      - uses: ./.github/actions/cache
+      - run: |
+          make iwyu
+          if git diff-index --quiet HEAD; then
+            echo "Headers are incorrect, either manually adjust headers or run"
+            echo "'make iwyu' with 'include-what-you-use' and 'iwyu-fix-includes' installed"
+            git diff --color --exit-code
+          fi
