--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,9 +38,4 @@ jobs:
       - run: ./.github/scripts/install_deps.sh
       - uses: ./.github/actions/cache
       - run: |
-          make iwyu
-          if git diff-index --quiet HEAD; then
-            echo "Headers are incorrect, either manually adjust headers or run"
-            echo "'make iwyu' with 'include-what-you-use' and 'iwyu-fix-includes' installed"
-            git diff --color --exit-code
-          fi
+          ls /usr/bin
