build: rework formatting to use add_glob_target
This will ensure that we can pass flags and make adjustments from the
top level cmake file instead of digging through the cmake directory.
More importantly, this will only format files that have been changed.
This has a slightly higher initial cost compared to previous solution as
all files must be initially formatted, but the gained speed up should
more than make up for it quickly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,9 +226,6 @@ add_glob_target(
   FLAGS -ll ${PROJECT_SOURCE_DIR}/test/lua_runner.lua ${CMAKE_BINARY_DIR}/usr luacheck -q
   GLOB_DIRS runtime/ scripts/ src/ test/
   GLOB_PAT *.lua
-  EXCLUDE
-    runtime/lua/vim/_meta/.*
-    runtime/lua/coxpcall.lua
   TOUCH_STRATEGY SINGLE)
 add_dependencies(lintlua-luacheck lua-dev-deps)
 
@@ -238,8 +235,6 @@ add_glob_target(
   FLAGS --color=always --check --respect-ignores
   GLOB_DIRS runtime/
   GLOB_PAT *.lua
-  EXCLUDE
-    /runtime/lua/vim/_meta
   TOUCH_STRATEGY SINGLE)
 
 add_custom_target(lintlua)
@@ -261,12 +256,12 @@ add_custom_target(lint)
 add_dependencies(lint lintc lintlua lintsh lintcommit)
 
 # Format
-add_custom_target(formatlua
-  COMMAND ${CMAKE_COMMAND}
-    -D FORMAT_PRG=${STYLUA_PRG}
-    -D LANG=lua
-    -P ${PROJECT_SOURCE_DIR}/cmake/Format.cmake
-  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+add_glob_target(
+  TARGET formatlua
+  COMMAND ${STYLUA_PRG}
+  FLAGS --respect-ignores
+  GLOB_DIRS runtime
+  GLOB_PAT *.lua)
 
 add_custom_target(format)
 add_dependencies(format formatc formatlua)
