build: enable lintlua for src/ dir
Problem:
We disable stylua for some Lua code. Automating code-style is an
important tool for reducing time spent on accidental (non-essential)
complexity.

Solution:
- Enable lintlua for `src/` directory.

followup to 517f0cc634b985057da5b95cf4ad659ee456a77e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,7 +233,7 @@ add_glob_target(
   TARGET lintlua-stylua
   COMMAND ${STYLUA_PRG}
   FLAGS --color=always --check --respect-ignores
-  GLOB_DIRS runtime/ scripts/
+  GLOB_DIRS runtime/ scripts/ src/
   GLOB_PAT *.lua
   TOUCH_STRATEGY SINGLE)
 
@@ -260,7 +260,7 @@ add_glob_target(
   TARGET formatlua
   COMMAND ${STYLUA_PRG}
   FLAGS --respect-ignores
-  GLOB_DIRS runtime/ scripts/
+  GLOB_DIRS runtime/ scripts/ src/
   GLOB_PAT *.lua)
 
 add_custom_target(format)
