build: enable lintlua for test/unit/ dir
Problem:
Not all Lua code is checked by stylua. Automating code-style is an
important mechanism for reducing time spent on accidental
(non-essential) complexity.

Solution:
- Enable lintlua for `test/unit/` directory.
- TODO: only `test/functional/` remains unchecked.

previous: 45fe4d11add933df76a2ea4bf52ce8904f4a778b
previous: 517f0cc634b985057da5b95cf4ad659ee456a77e

--- a/.styluaignore
+++ b/.styluaignore
@@ -2,4 +2,10 @@
 /runtime/lua/coxpcall.lua
 /runtime/lua/vim/_meta
 /runtime/lua/vim/re.lua
-/test
+
+/test/functional
+/test/functional/fixtures/lua/syntax_error.lua
+/test/functional/legacy/030_fileformats_spec.lua
+/test/functional/legacy/044_099_regexp_multibyte_magic_spec.lua
+/test/functional/legacy/093_mksession_cursor_cols_latin1_spec.lua
+/test/functional/lua/luaeval_spec.lua
