--- a/.github/workflows/optional.yml
+++ b/.github/workflows/optional.yml
@@ -34,8 +34,6 @@ jobs:
             cd neovim &&
             git fetch origin ${{ github.ref }}:pr &&
             git switch pr &&
-            cmake -S cmake.deps -B .deps -G Ninja -D USE_BUNDLED_LUAJIT=OFF -D USE_BUNDLED_LUA=ON &&
-            cmake --build .deps &&
-            cmake -B build -G Ninja -D PREFER_LUA=ON &&
+            cmake -B build -G Ninja -D PREFER_LUA=ON -D USE_BUNDLED_LUAJIT=OFF -D USE_BUNDLED_LUA=ON &&
             make ${{ matrix.test }}
             "
