build: add LTO info when LTO is enabled

--- a/cmake.config/CMakeLists.txt
+++ b/cmake.config/CMakeLists.txt
@@ -145,10 +145,12 @@ if(C_FLAGS_VERSION_OUTPUT)
   string(PREPEND C_FLAGS_VERSION_OUTPUT " ")
 endif()
 
-set(C_LTO_VERSION_OUTPUT ${CMAKE_C_COMPILE_OPTIONS_IPO})
-if(C_LTO_VERSION_OUTPUT)
-  string(REPLACE ";" " " C_LTO_VERSION_OUTPUT "${C_LTO_VERSION_OUTPUT}")
-  string(PREPEND C_LTO_VERSION_OUTPUT " ")
+if(ENABLE_LTO)
+  set(C_LTO_VERSION_OUTPUT ${CMAKE_C_COMPILE_OPTIONS_IPO})
+  if(C_LTO_VERSION_OUTPUT)
+    string(REPLACE ";" " " C_LTO_VERSION_OUTPUT "${C_LTO_VERSION_OUTPUT}")
+    string(PREPEND C_LTO_VERSION_OUTPUT " ")
+  endif()
 endif()
 
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL 3.15)
