build: add lto info if not debug

--- a/cmake.config/CMakeLists.txt
+++ b/cmake.config/CMakeLists.txt
@@ -145,7 +145,7 @@ if(C_FLAGS_VERSION_OUTPUT)
   string(PREPEND C_FLAGS_VERSION_OUTPUT " ")
 endif()
 
-if(ENABLE_LTO)
+if(NOT CMAKE_BUILD_TYPE MATCHES "Debug")
   set(C_LTO_VERSION_OUTPUT ${CMAKE_C_COMPILE_OPTIONS_IPO})
   if(C_LTO_VERSION_OUTPUT)
     string(REPLACE ";" " " C_LTO_VERSION_OUTPUT "${C_LTO_VERSION_OUTPUT}")
